# Retr0-Games

./: CMakeLists.txt
src/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
src/core/: AssetsManager.cpp  AssetsManager.h  Engine.cpp  Engine.h  Scene.h  SceneManager.cpp  SceneManager.h
src/games/snake/: SnakeScene.cpp  SnakeScene.h
